--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import '../styles/global.css';
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="MiyuValkyrie - Twitch Streamer, Challenge-Runner, No-Hitter" />
     <title>MiyuValkyrie - Streamer Twitch / Challenge-Runner</title>
