--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,16 @@
 ---
 import App from '../components/App';
 import '../styles/global.css';
+
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href={`${baseUrl}favicon.ico`} />
+    <link rel="shortcut icon" href={`${baseUrl}favicon.ico`} />
+    <link rel="apple-touch-icon" href={`${baseUrl}favicon.ico`} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="MiyuValkyrie - Twitch Streamer, Challenge-Runner, No-Hitter" />
     <title>MiyuValkyrie - Streamer Twitch / Challenge-Runner</title>
